hphp/hack/test/typecheck/new_inference/transitive_error_4.php.exp
File "transitive_error_4.php", line 17, characters 6-7:
Invalid argument (Typing[4110])
  File "transitive_error_4.php", line 10, characters 17-22:
  Some type constraint(s) are violated here
  File "transitive_error_4.php", line 10, characters 12-12:
  T is a constrained type parameter
  File "transitive_error_4.php", line 10, characters 17-22:
  This is a string
  File "transitive_error_4.php", line 12, characters 17-19:
  It is incompatible with an int
